--- a/.gitignore
+++ b/.gitignore
@@ -27,14 +27,8 @@ bin/
 
 ### Mac OS ###
 .DS_Store
-/.idea/.gitignore
 /FlightStation.iml
-/.idea/vcs.xml
-/.idea/modules.xml
-/.idea/misc.xml
 /out/*
-/.idea/uiDesigner.xml
-/.idea/dictionaries/make.xml
-/.idea/inspectionProfiles/Project_Default.xml
 /*.csv
 /*.ser
+/.idea/*
